syntax = "proto3";

package user;
option go_package = ".";

service UserProfileService {
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
  rpc PutProfile (PutProfileRequest) returns (PutProfileResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message User {
  string user_id = 1;
  string login = 2;
  string email = 3;
  string password_hash = 4;
  string name = 5;
  string surname = 6;
  string birth_date = 7;
  string phone_number = 8;
  string created_at = 9;
  string updated_at = 10;
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  User user = 1;
}

message PutProfileRequest {
  User user = 1;
}

message PutProfileResponse {
  bool success = 1;
}

message RegisterRequest {
  string login = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}
